service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  labels:   
    app: test-app
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000
  selector:
    app: test-app
